--- a/info.css
+++ b/info.css
@@ -1,7 +1,7 @@
 @import url(http://fonts.googleapis.com/earlyaccess/nanumbrushscript.css);
-/*::-webkit-scrollbar {
+::-webkit-scrollbar {
   display: none;
-}*/
+}
 body {
   margin: 0;
   padding: 0;
