--- a/info.css
+++ b/info.css
@@ -209,7 +209,7 @@ h2 {
     width: 100%;
     height: 100%;
     position: absolute;
-    background-image: url(image/kimJung.jpg);
+    background-image: url(image/kimjung.jpg);
     background-size: 100% 100%;
     top: 610vh;
     z-index: 11;
