--- a/info.css
+++ b/info.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/earlyaccess/nanumbrushscript.css);
+@import url(https://fonts.googleapis.com/earlyaccess/nanumbrushscript.css);
 ::-webkit-scrollbar {
   display: none;
 }
